@@ -1,0 +1,4 @@
+Rocs is Free Software and part of the KDE project, 
+It aims to provide a full featured Graph - Editor and a Programming Enviroment that's connected to the Graph
+by doing it so, it can be used for teachers to show the joy and mistery of Graph Theory, 
+and studants can use it to implement the various algorithms for the beloved teacher.
