@@ -1,3 +1,7 @@
+24 NOVEMBER 2008
+
+Shortcut Keys everywyere, please.
+
 17 NOVEMBER 2008
 
 1 - Save / Load Graph files missing from core/graphDocument.
@@ -27,6 +31,5 @@
   doesn't need to be a huge thing, but a small fade in is better on the eyes.
 
 8 - 'Remove' button for removing nodes and edges.
-
 
 
