@@ -25,20 +25,19 @@
 #include "SUI_MainWindow.h"
 
 int main ( int argc, char *argv[] ){
-  KAboutData aboutData ( "Rocs",
-                         0,
-                         ki18n ( "Rocs 1" ),
-                         "1.0",
-                         ki18n ( "Graph Theory Tool" ),
-                         KAboutData::License_GPL,
-                         ki18n ( "(c) 2008" ),
-                         ki18n ( "Thanks to Ugo Sangiori" ),
-                         "",
-                         "submit@bugs.kde.org" );
+  KAboutData aboutData ("Rocs",    
+			0,
+			ki18n ( "Rocs 1" ),  
+			"1.0",
+			ki18n ( "Graph Theory Tool" ),
+			KAboutData::License_GPL,
+			ki18n ( "(c) 2008" ),
+			ki18n ( "Thanks to Ugo Sangiori" ),
+			"",
+			"submit@bugs.kde.org" );
 
   KCmdLineArgs::init ( argc, argv, &aboutData );
   KApplication app;
-
 
   MainWindow *window = new MainWindow();
   window->show();
