@@ -1,12 +1,2 @@
-PARTS THAT ARE READY:
-  
-LIBGRAPH - 90%, NEEDS TESTING.
-
-PARTS THAT AREN'T EVEN A LITTLE BIT READY:
-
-GraphDocumentModel
-GraphModel
-NodeModel
-EdgeModel
 
 
