@@ -1,2 +1,5 @@
-28 July
+24 November:
+  Ui Nearly Finished. Polishing Interface.
+
+28 July:
 - Accepted on Kde Playground
