@@ -1,1 +1,3 @@
-- Partially ported to KDE4
+- finished the Graph API
+- Using GraphicsView for The Canvas
+- Ported to KDE4
